src/objects/FieloAlpha__Menu__c.object
<CustomObject>
    <description>The members’ portal&apos;s pages. It is equivalent to the site map.</description>
    <fields>
        <fullName>FieloPLT__AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CSSClasses__c</fullName>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CSS__c</fullName>
        <description>CSS code to modify the look and formatting of this menu.</description>
        <inlineHelpText>Enter a CSS code for this menu.</inlineHelpText>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CustomURL__c</fullName>
        <description>An external or internal link to a customized page.</description>
        <inlineHelpText>Enter the URL to where you want to redirect. The link must be of the form http://www.domain.com.</inlineHelpText>
        <label>Custom URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <description>A description of this menu, for your use only.</description>
        <inlineHelpText>Enter a description for this menu (only visible from the back end).</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a desktop computer.</description>
        <inlineHelpText>Check this option for making this menu visible on a desktop computer.</inlineHelpText>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExternalName__c</fullName>
        <label>External Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this the home page of the members&apos; portal.</description>
        <inlineHelpText>Check this option for making this the Home page.</inlineHelpText>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ImagePosition__c</fullName>
        <label>Image Position</label>
        <picklist>
            <picklistValues>
                <fullName>Only Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloPLT__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Layout__c</fullName>
        <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Menu by device.</description>
        <label>Display Device</label>
        <picklist>
            <picklistValues>
                <fullName>One Column</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Two Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner + Two Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Link__c</fullName>
        <description>Field to indicate if the menu has components</description>
        <label>Has components</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the father menu</description>
        <label>Menu</label>
        <referenceTo>FieloPLT__Menu__c</referenceTo>
        <relationshipLabel>Sub Menus</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a cell phone.</description>
        <inlineHelpText>Check this option for making this menu to be visible on a mobile device.</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <description>The order in which this menu will show in the members&apos; portal.</description>
        <inlineHelpText>Select the order in which this menu will be showed in the members&apos; portal.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Placement__c</fullName>
        <description>The placement of this menu. It can be Top, Main or Footer.</description>
        <inlineHelpText>Pick the placement for this menu.</inlineHelpText>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this menu belongs.</description>
        <inlineHelpText>Select the program to which this menu belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used to determine if a Menu has segments. When this lookup is null, it doesn&apos;t have any Segment Domain.</description>
        <inlineHelpText>Check this box in order to activate this content feed.</inlineHelpText>
        <label>Has segments</label>
        <referenceTo>FieloPLT__RedemptionRule__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SEODescription__c</fullName>
        <label>SEO Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SEOKeywords__c</fullName>
        <label>SEO Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SEOTitle__c</fullName>
        <label>SEO Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a tablet computer.</description>
        <inlineHelpText>Check this option for making this menu visible on a tablet computer.</inlineHelpText>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Title__c</fullName>
        <description>A title that will show on top of the page.</description>
        <inlineHelpText>Enter a title that will show on top of the page.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__visibility__c</fullName>
        <description>Who will be able to see this menu: nobody, everybody or only logged in users.</description>
        <inlineHelpText>Define who will see the menu.</inlineHelpText>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Menu</label>
    <listViews>
        <fullName>FieloPLT__All_Menu</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Program__c</columns>
        <columns>FieloPLT__Home__c</columns>
        <columns>FieloPLT__Placement__c</columns>
        <columns>FieloPLT__visibility__c</columns>
        <columns>FieloPLT__Menu__c</columns>
        <columns>FieloPLT__Desktop__c</columns>
        <columns>FieloPLT__Tablet__c</columns>
        <columns>FieloPLT__Mobile__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Menu</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__Menu</fullName>
        <active>true</active>
        <label>Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__SubMenu</fullName>
        <active>true</active>
        <label>Sub Menu</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>